Bug 461813 - Unnecessary and duplicated 'Too few items to process' warnings after canceling the installation of a .deb package
Summary: Unnecessary and duplicated 'Too few items to process' warnings after cancelin...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-14 11:27 UTC by Patrick Silva
Modified: 2022-11-15 20:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.4
Sentry Crash Report:


Attachments
screenshot (130.47 KB, image/png)
2022-11-14 11:27 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-11-14 11:27:17 UTC
Created attachment 153734 [details]
screenshot

STEPS TO REPRODUCE
1. open a .deb package with Discover
2. click on 'Install' button
3. cancel the password dialog

OBSERVED RESULT
warnings seen in the attached screenshot

EXPECTED RESULT
no warning

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-11-14 22:25:28 UTC
Can reproduce on Fedora too.
Comment 2 Bug Janitor Service 2022-11-15 01:22:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/416
Comment 3 Aleix Pol 2022-11-15 17:44:26 UTC
Git commit a7f5ef1cdda65d74a60ba9c799f1c7688e68f2e2 by Aleix Pol.
Committed on 15/11/2022 at 17:41.
Pushed by apol into branch 'master'.

pk: Only issue a resolve if something changed

M  +4    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/a7f5ef1cdda65d74a60ba9c799f1c7688e68f2e2
Comment 4 Nate Graham 2022-11-15 17:51:57 UTC
Git commit d371b8454907f5440398444e9a6d4853b2b459fc by Nate Graham, on behalf of Aleix Pol.
Committed on 15/11/2022 at 17:51.
Pushed by ngraham into branch 'Plasma/5.26'.

pk: Only issue a resolve if something changed


(cherry picked from commit a7f5ef1cdda65d74a60ba9c799f1c7688e68f2e2)

M  +4    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/d371b8454907f5440398444e9a6d4853b2b459fc