pk: Only issue a resolve if something changed

BUG: 461813